Started working on changing images to HTML

--- a/pub/index.html
+++ b/pub/index.html
@@ -3,14 +3,29 @@
  <head>
    <title>UIBrush</title>
    <meta charset="utf-8">
-     <link href="style.css" rel="stylesheet" type="text/css">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="css/responsive-styles.min.css" rel="stylesheet" type="text/css">
  </head>
 <body>
     <div id="wrap">
-        <div id="header"><img src="images/logo.png" alt="UIBrush" class="logo">
-            <img src="images/image.png" alt="UIBrush" class="image">
-            <img src="images/text.png" alt="UIBrush" class="text">
+        <div id="header">
+            <img src="images/logo.png" alt="UIBrush" class="logo">
 
+            <div class="slider">
+                <div class="slide">
+                    <img src="images/image.png" alt="UIBrush" class="image">
+                    <div class="slide-text">
+                        <p>
+                            <span>Welcome to UIBrush</span>
+                        </p>
+                        <p>
+                            <span>We provide ultimate templates</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <img src="images/text.png" alt="UIBrush" class="text">
             <img src="images/line.png" alt="UIBrush" class="line">
         </div>
         <div id="top_menu"><img src="images/menu.png" alt="UIBrush" class="menu">
